# Digital-Library-BS19-06

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: db.sqlite
digital_library/: __main__.py  app.py  auth.py  cfg.py  db.py  static
digital_library/db/: __init__.py  db.py
digital_library/db/migrations/: 001.py  002.py  __init__.py
digital_library/views/: __init__.py  admin.py  auth.py  forms.py  index.py
digital_library/views/templates/: _content.html  _footer.html  _formhelpers.html  _navbar.html  _page.html  comment_section.html  handler404.html  index.html  list_of_materials.html  login.html  material.html  material_reviews.html  register.html  search.html
digital_library/views/templates/admin/: upload.html
