[tool.poetry]
name = "digital-library-bs19-06"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.13.3"
flask = "^1.1.2"
flask-admin = "^1.5.6"
wtf-peewee = "^3.0.2"
flask-paginate = "^0.7.1"
flask-login = "^0.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
